# xar

./: .gitignore  CMakeLists.txt  README.md  build.sh
xar/: CMakeLists.txt  configure  configure.ac
xar/include/: CMakeLists.txt  config.h.in  xar.h.in
xar/lib/: CMakeLists.txt  archive.c  archive.h  asprintf.h  ext2.c  hash.c  linuxattr.c  signature.c
xar/src/: CMakeLists.txt  xar.c
